--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-POSTHOG_PUBLIC_KEY=
-POSTHOG_HOST=
+POSTHOG_PUBLIC_KEY="phc_lIMunm30klpLvetBYKUR4tH8VWeIOJsVCLLnHB73AKA"
+POSTHOG_HOST="https://us.i.posthog.com"
